--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
 * { margin: 0px; padding: 0px; box-sizing: border-box; scroll-behavior: smooth; }
-html,body { background-color: #000; color: #fff; font-family: 'Nexa-ExtraLight', sans-serif; touch-action: none; }
+html,body { background-color: #000; color: #fff; font-family: 'Nexa-ExtraLight', sans-serif; }
 html.lenis,html.lenis body { height:auto }
 .lenis.lenis-smooth { scroll-behavior:auto!important }
 .lenis.lenis-smooth [data-lenis-prevent] { overscroll-behavior:contain; }
@@ -24,7 +24,7 @@ button { background:transparent; border:0px; outline:none; font-family: 'Nexa-Ex
 ul { padding: 0px; margin: 0px; }
 ul li { list-style: none; }
 a { text-decoration: none; }
-h1 { font-size: clamp(48px, 8vw , 92px); font-family: 'Nexa-Heavy', sans-serif; line-height: 100%; }
+h1 { font-size: clamp(48px, 8vw , 92px); font-family: 'Nexa-Heavy', sans-serif; line-height: 100%; text-transform: uppercase; }
 h2 { font-size: clamp(32px, 6vw, 56px); text-transform: uppercase; font-family: 'Nexa-Heavy', sans-serif; line-height: 100%; }
 h3 { font-size: clamp(22px, 3vw, 26px); font-family: 'Nexa-Heavy', sans-serif; line-height: 100%; }
 h4 { font-size: clamp(18px, 2.8vw, 24px); font-family: 'Nexa-Heavy', sans-serif; line-height: 100%; }
