--- a/css/resopnsive.css
+++ b/css/resopnsive.css
@@ -2,9 +2,10 @@
  .site-input_holder { flex: 100%; }
 .off-canvas-menu .cta_main { display: block; position: absolute; bottom: 0; width: 100%; padding: 0px; }
 .header a.cta { width: 100%; padding: clamp(15px, 1.4vw, 17px) clamp(15px, 1.8vw, 23px); border-radius: 0px; }
-.header .menu-toggle,.off-canvas-menu { display: block; }
-.header .menu-toggle { background: #fff; padding: 20px; }
-.off-canvas-menu { position: fixed; top: 0; right: 0; height: 60dvh; width: 100%; background: #000; color: white; transform: translateY(-200%); transition: transform 0.5s linear; z-index: 1000; display: flex; flex-direction: column; }
+.header .menu-toggle,.off-canvas-menu { display: flex; }
+.header .menu-toggle svg{height: 42px;}
+.header .menu-close svg {height: 32px;}
+.off-canvas-menu { position: fixed; top: 0; right: 0; height: 100dvh; width: 100%; background: #000; color: white; transform: translateY(-200%); transition: transform 0.5s linear; z-index: 1000; display: flex; flex-direction: column; }
 .off-canvas-menu::after { content:''; position: absolute; top: 0; left: 0; width: 100%; height: 100dvh; background: rgba(0,0,0,0.5); z-index: -1; backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); }
 .off-canvas-menu .cta_main { background-color: transparent; }
 .craft { flex-direction: column; }
@@ -22,4 +23,14 @@
 .site_selection--area { column-gap:5px; }
 .craft .craft-right .right-inner .right-box { padding: 20px 0; }
 .site_footer-nav--links.contact-section { max-width: 100%; }
+
+#projects {
+  margin: 100px 0;
+}
+
+.site_footer-container .site_navigation--item p {
+  flex: 100%;
+}
+
+.social_handles{order: -1;}
  }
