--- a/css/style.css
+++ b/css/style.css
@@ -857,7 +857,7 @@ span.has-splitting-line { display: inline-block; }
 .hero-subtitle {
   font-size: clamp(18px, 1.5vw, 24px) !important;
   color: #ccc;
-  max-width: 700px !important;
+  max-width: clamp(460px,50vw,700px) !important;
   line-height: 1.6;
   text-align: center;
   position: relative;
